# smo-practice

./: .gitignore  Makefile  MakefileNSO  README.md  exported.txt
include/: AchievementHolder.h  constants.h  debugMenu.hpp  drawer.h  helpers.hpp  mem.h  nn.h  str.h  svc.h  types.h
include/agl/: DrawContext.h  RenderBuffer.h  TextureData.h
include/al/: HtmlViewer.h  util.hpp
include/al/LiveActor/: LiveActor.h  LiveActorGroup.h  LiveActorKit.h
include/al/PlayerHolder/: PlayerHolder.h
include/al/actor/: Placement.h  WaterSurfaceFinder.h
include/al/area/: AreaObj.h  AreaObjDirector.h  AreaObjGroup.h  (+1 more)
include/container/: seadPtrArray.h
include/fl/: common.h  efun.h  game.h  input.h  list.h  nerve.h  packet.h  rtti.hpp  server.h  tas.h  ui.h  util.h
include/game/: GameDataHolderAccessor.h  PlayerActorBase.h  PlayerHackKeeper.h  StageScene.hpp  WorldEndBorderKeeper.h
include/nn/: account.h  fs.h  hid.h  os.h  socket.h  util.h
include/rs/: util.hpp
include/sead/: FrameBuffer.h  textwriter.h
patches/: 100.slpatch  130.slpatch  modes.slpatch  modes130.slpatch
patches/configs/: 100.config  130.config
romfs/LayoutData/: CounterCoin.szs
scripts/: sendPatch.py
smo-tas-server/: CMakeLists.txt
smo-tas-server/include/: common.h  packet.h  script.h  server.cpp  server.h  tas.h  types.h  util.h
smo-tas-server/src/: common.cpp  packet.cpp  script.cpp  server.cpp  smo-server.cpp  util.cpp
source/: debugMenu.cpp  drawer.cpp  main.cpp  module.cpp  seadVector.cpp
source/fl/: game.cpp  input.cpp  packet.cpp  server.cpp  tas.cpp  ui.cpp  util.cpp
(+212 files in other folders)
